--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,7 @@
     "rules": "storage.rules"
   },
   "hosting": {
+    "site": "naoto-realtime-chat",
     "public": "build/web",
     "ignore": [
       "firebase.json",
